--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,26 @@ padding: 10px 20px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.24);
     
 }
+
+/* users section */
+.main{
+    display: flex;
+    margin: auto;
+    width: 80%;
+    justify-content:space-around;
+    padding: 10px 30px;
+    border-radius:10px;
+    background-color: rgba(95, 158, 160, 0.39);
+    
+ }
+
+ .main h1{
+font-size: 40px;
+font-weight: 700;
+color: rgba(0, 0, 255, 0.418);
+ }
+
+ .wrap{
+    text-align: center;
+    font-size: 20px;
+ }
